--- a/Html.css
+++ b/Html.css
@@ -1,10 +1,14 @@
 header {
+    background-color: darksalmon;
     color: lightseagreen;
 }
 
-
+p {
+    margin-right: 2em; 
+  }
 
 body{
+    background-color: darkkhaki;
     color: lightskyblue;
 }
 
