--- a/Html.css
+++ b/Html.css
@@ -1,6 +1,6 @@
 header {
-    background-color: darksalmon;
-    color: lightseagreen;
+    background-color: turquoise;
+    color: dodgerblue;
 }
 
 p {
@@ -8,8 +8,8 @@ p {
   }
 
 body{
-    background-color: darkkhaki;
-    color: lightskyblue;
+    background-color: azure;
+    color: navy;
 }
 
 
