--- a/Inscription.css
+++ b/Inscription.css
@@ -1,11 +1,11 @@
 header{
-    background-color: darksalmon;
+    background-color: turquoise;
     color: dodgerblue;
 }
 
 body {
-    background-color: darkkhaki;
-    color: lightskyblue;
+    background-color: azure;
+    color: navy;
 }
 
 
